[gd_scene load_steps=9 format=3 uid="uid://bnn4qqvkkoir3"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_a5fp6"]
[ext_resource type="PackedScene" uid="uid://dc8uolffrrmb0" path="res://scenes/player.tscn" id="2_2xke2"]
[ext_resource type="PackedScene" uid="uid://b8nsmkxsvnfyf" path="res://scenes/world/sky.tscn" id="3_gmokk"]
[ext_resource type="PackedScene" uid="uid://di1w22p6gb3r8" path="res://scenes/world/terrain.tscn" id="3_v60bq"]
[ext_resource type="AudioStream" uid="uid://n8ip373pw4ko" path="res://assets/audio/spinning-out.ogg" id="6_f3ebc"]
[ext_resource type="FontFile" uid="uid://ba6ff514jb8kr" path="res://assets/fonts/PixelOperator8.ttf" id="6_ptopo"]
[ext_resource type="AudioStream" uid="uid://dvdvq0jesxus4" path="res://assets/audio/groovy-booty.ogg" id="7_5nbj5"]
[ext_resource type="AudioStream" uid="uid://bsc8n2es27uhx" path="res://assets/audio/game-over.mp3" id="7_iut1e"]

[node name="Game" type="Node"]
script = ExtResource("1_a5fp6")

[node name="Audio" type="Node" parent="."]
process_mode = 3

[node name="BGM" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("6_f3ebc")
bus = &"BGM"

[node name="BGM_GameOver" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("7_5nbj5")
bus = &"BGM"

[node name="SFX_GameOver" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("7_iut1e")
bus = &"SFX"

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
metadata/_edit_lock_ = true

[node name="TimeLabel" type="Label" parent="Camera"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 527.5
offset_top = 40.0
offset_right = 752.5
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_ptopo")
theme_override_font_sizes/font_size = 40
text = "0:00:00"
metadata/_edit_lock_ = true

[node name="SavingLabel" type="Label" parent="Camera"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 530.0
offset_top = 344.0
offset_right = 750.0
offset_bottom = 376.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_ptopo")
theme_override_font_sizes/font_size = 32
text = "Saving..."
metadata/_edit_lock_ = true

[node name="GameOverHUD" type="VBoxContainer" parent="Camera"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 506.0
offset_top = 310.0
offset_right = 774.0
offset_bottom = 410.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
metadata/_edit_lock_ = true

[node name="PlayAgainButton" type="Button" parent="Camera/GameOverHUD"]
process_mode = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("6_ptopo")
theme_override_font_sizes/font_size = 32
text = "PLAY AGAIN"

[node name="MainMenuButton" type="Button" parent="Camera/GameOverHUD"]
process_mode = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("6_ptopo")
theme_override_font_sizes/font_size = 32
text = "MAIN MENU"

[node name="SpeedTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="MintTokenTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Sky" parent="." instance=ExtResource("3_gmokk")]

[node name="Terrain1" parent="." instance=ExtResource("3_v60bq")]
position = Vector2(0, 568)
metadata/_edit_lock_ = true

[node name="Terrain2" parent="." instance=ExtResource("3_v60bq")]
position = Vector2(2600, 568)

[node name="Player" parent="." instance=ExtResource("2_2xke2")]
position = Vector2(316, 538)
metadata/_edit_lock_ = true

[node name="Guide" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 671.0
offset_top = 265.0
offset_right = 1267.0
offset_bottom = 332.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_ptopo")
theme_override_font_sizes/font_size = 32
text = "PRESS SPACE TO JUMP
ARROW DOWN TO DUCK"
metadata/_edit_lock_ = true

[connection signal="finished" from="Audio/SFX_GameOver" to="." method="_on_sfx_game_over_finished"]
[connection signal="pressed" from="Camera/GameOverHUD/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="Camera/GameOverHUD/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="timeout" from="SpeedTimer" to="." method="_on_speed_timer_timeout"]
[connection signal="timeout" from="MintTokenTimer" to="." method="_on_mint_token_timer_timeout"]
